添加删除 显示上传图片功能

--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -601,9 +601,9 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 	.hwm_list .hwm_list_left .hwm_list_c .hwm_color p span{color: #f23030;display: inline-block;margin-left: 10px;}
 	.hwm_list .hwm_list_left .hwm_list_c .hwm_color select{width: 240px;height: 40px;font-size: 16px;border-radius: 10px;border: none;background: #f5f5f5;}
 	.hwm_list .hwm_list_left .hwm_list_c .hwm_pohot .file{width: 100px !important;height: 100px;border-radius: 10px;cursor: pointer;position: relative;margin-right: 30px !important;margin-bottom: 0;display: block;background: #F5F5F5;}
-	.hwm_list .hwm_list_left .hwm_list_c .hwm_pohot .file input{width: 100px;height: 100px;line-height: 100px;border-radius: 5px;padding: 0 20px;font-size: 14px;color: #666; opacity: 0;cursor: pointer;}
-	.hwm_list .hwm_list_left .hwm_list_c .hwm_pohot .file:before{content: '';width: 20px;height: 2px;background: #b4bac1;display: block;position: absolute;top:49px;left: 40px;border-radius: 5px;}
-	.hwm_list .hwm_list_left .hwm_list_c .hwm_pohot .file:after{content: '';width: 2px;height: 20px;background: #b4bac1;display: block;position: absolute;top: 40px;left: 49px;border-radius: 5px;}
+	.hwm_list .hwm_list_left .hwm_list_c .hwm_pohot .file input{width: 100px;height: 100px;line-height: 100px;border-radius: 5px;padding: 0 20px;font-size: 14px;color: #666; opacity: 0;cursor: pointer;position: relative;z-index: 2;cursor: pointer;}
+	.hwm_list .hwm_list_left .hwm_list_c .hwm_pohot .file:before{content: '';width: 20px;height: 2px;background: #b4bac1;display: block;position: absolute;top:49px;left: 40px;border-radius: 5px;z-index: 2;cursor: pointer;}
+	.hwm_list .hwm_list_left .hwm_list_c .hwm_pohot .file:after{content: '';width: 2px;height: 20px;background: #b4bac1;display: block;position: absolute;top: 40px;left: 49px;border-radius: 5px;z-index: 2;cursor: pointer;}
 	.hwm_list .hwm_list_left .hwm_list_c .msg textarea{width: 100%;height: 100px;border-radius: 10px;background: #F5F5F5;border: none;padding: 10px;font-size: 16px;margin-bottom: 20px;}
 	.hwm_list .hwm_list_left .hwm_list_c .msg .msg_p{color: #f23030;margin-bottom: 0;}
 	.hwm_list .hwm_list_left .hwm_list_c .hwm_bot{padding: 20px 0;}
@@ -623,7 +623,8 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 	.price_input span.add{background: url(../img/png/new_3.png) no-repeat center/0.14rem 0.14rem;right: 0;cursor: pointer;}
 	.price_input input{display: inline-block;width: 0.32rem;height: 0.3rem;line-height: 0.3rem; float: left;margin-left: 0.32rem;
 	border-right: 1px solid#ccc;border-left: 1px solid#ccc;text-align: center;font-size: 0.2rem;background: #ffffff;}
-	
+	.file_i{position: absolute;display: block;width: 100px;border-radius:5px;top: 0;}
+	.file_i img{border-radius:5px;display: block;}
 	
 	/* 弹窗 */
 	.ydh_sern{display: none;}
@@ -730,9 +731,9 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 	.ydh_care_d .hwm_color p span{color: #f23030;display: inline-block;margin-left: 10px;}
 	.ydh_care_d .hwm_color select{width: 4rem;height: 0.6rem;font-size: 0.24rem;border-radius: 10px;border: none;background: #f5f5f5;}
 	.ydh_care_d .hwm_pohot .file{width: 100px !important;height: 100px;border-radius: 10px;cursor: pointer;position: relative;margin-right: 30px !important;margin-bottom: 0;display: block;background: #F5F5F5;}
-	.ydh_care_d .hwm_pohot .file input{width: 100px;height: 100px;line-height: 100px;border-radius: 5px;padding: 0 20px;font-size: 14px;color: #666; opacity: 0;cursor: pointer;}
-	.ydh_care_d .hwm_pohot .file:before{content: '';width: 20px;height: 2px;background: #b4bac1;display: block;position: absolute;top:49px;left: 40px;border-radius: 5px;}
-	.ydh_care_d .hwm_pohot .file:after{content: '';width: 2px;height: 20px;background: #b4bac1;display: block;position: absolute;top: 40px;left: 49px;border-radius: 5px;}
+	.ydh_care_d .hwm_pohot .file input{width: 100px;height: 100px;line-height: 100px;border-radius: 5px;padding: 0 20px;font-size: 14px;color: #666; opacity: 0;cursor: pointer;z-index: 99;cursor: pointer;display: block;position: relative;}
+	.ydh_care_d .hwm_pohot .file:before{content: '';width: 20px;height: 2px;background: #b4bac1;display: block;position: absolute;top:49px;left: 40px;border-radius: 5px;z-index: 2;cursor: pointer;}
+	.ydh_care_d .hwm_pohot .file:after{content: '';width: 2px;height: 20px;background: #b4bac1;display: block;position: absolute;top: 40px;left: 49px;border-radius: 5px;z-index: 2;cursor: pointer;}
 	.ydh_care_d .msg textarea{width: 100%;height: 160px;border-radius: 10px;background: #F5F5F5;border: none;padding: 10px;font-size: 0.16rem;margin-bottom: 20px;}
 	.ydh_care_d .msg .msg_p{color: #f23030;margin-bottom: 0;}
 	.ydh_care_d .hwm_bot{padding: 0.3rem 0 0;}
@@ -740,6 +741,9 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 	.ydh_care_d .hwm_bot p span{display: inline-block;}
 	.ydh_care_d .hwm_bot p span:last-child{color: #f23030;text-align: right;float: right;}
 	.ydh_care_d .hwm_bot button{width: 100%;height: 0.7rem;display: block;text-align: center;margin: auto;font-size: 0.24rem;border: none;color: #FFFFFF;background: #f23030;border-radius: 0.35rem;line-height: 0.7rem;}
+	
+	.file_i{position: absolute;display: block;width: 100px;border-radius:5px;top: 0;}
+	.file_i img{border-radius:5px;display: block;}
 	/* 弹窗 */
 	.hwm_pc{display: none;}
 	.ydh_sern{position: fixed;background: rgba(0,0,0,0.5);top: 0;bottom: 0;left: 0;right: 0;z-index: 999;display: none;}
@@ -808,7 +812,9 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 	.price_input input{display: inline-block;width: 0.4rem;height: 0.4rem;line-height: 0.4rem; float: left;margin-left: 0.4rem;
 	border-right: 1px solid#ccc;border-left: 1px solid#ccc;text-align: center;font-size: 0.2rem;background: #ffffff;}
 	
-	.yd_hui{}
+	/* .shanchu {background: #ff003b;width: 0.72rem;position: absolute;right: -0.72rem;height: 100%;top: 0;}
+	.shanchu .del{width: 0.72rem;height: 0.72rem;display: block;position: absolute; top: 50%;right: 0;
+	margin-top: -0.36rem;z-index: 99;padding: 0.2rem;} */
 }	
 
 @media (min-width:320px) and (max-width:390px) {
@@ -885,8 +891,8 @@ position: absolute;top: 50%;left: 50%;margin-top: -0.16rem;margin-left: -0.16rem
 .yd_copt{background: #FFFFFF;}
 .yd_copt .copt_p{padding-left: 0.8rem;line-height: 1.1rem;font-size: 0.24rem;color: #333;border-bottom: 1px solid #eee;}
 .copt_div{background: #FFFFFF;}
-.copt_ul{padding: 0.3rem;}
-.copt_ul .copt_li{display: flex;position: relative;margin-bottom: 0.3rem;}
+.copt_ul{padding: 0.3rem 0;}
+.copt_ul .copt_li{display: flex;position: relative;margin-bottom: 0.3rem;padding: 0 0.3rem;overflow: hidden;}
 .copt_ul .copt_li .copt_list1{display: table-cell;margin: auto;vertical-align: middle;width: 0.5rem;}
 .copt_ul .copt_li .copt_list1 label{display: block;position: relative;}
 .copt_list2{width: 6.4rem;}
